# SillyBot

./: CMakeLists.txt  README.md  about.md  mod.json
src/: Bot.hpp  SillyBot.cpp  SillyBot.hpp  SillyPopup.cpp  SillyPopup.hpp  main.cpp
src/Hooks/: EndLevelLayer.cpp  MenuLayer.cpp  PauseLayer.cpp  PauseLayer.hpp
src/Recorder/: AudioRecorder.cpp  AudioRecorder.hpp  VideoRecorder.cpp  VideoRecorder.hpp
src/UI/: LoadMacroPopup.cpp  LoadMacroPopup.hpp  MacroCell.cpp  MacroCell.hpp  ReplayManagerDropdown.cpp  ReplayManagerDropdown.hpp  SaveMacroPopup.cpp  SaveMacroPopup.hpp
